Fix overlay z-index

--- a/less/index.less
+++ b/less/index.less
@@ -3,6 +3,7 @@
 
 :root {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	--uxa-overlay-z: 3000;
 }
 
 @import 'system-ui';
