--- a/less/overlay.less
+++ b/less/overlay.less
@@ -5,7 +5,7 @@
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 200;
+	z-index: 3000;
 
 	& > .backdrop {
 		position: absolute;
